# doapp

./: .gitignore  .gitmodules  README.md
dynamixel_driver/: CMakeLists.txt  package.xml
dynamixel_driver/config/: all.yaml  base.yaml
dynamixel_driver/config/examples/: joint_1_0.yaml
dynamixel_driver/include/dynamixel_driver/: driver.h  trajectory_follower.hpp
dynamixel_driver/launch/: controller.launch  trajectory_follower.launch
dynamixel_driver/msg/: MotorCommand.msg
dynamixel_driver/src/: controller.cpp  controller_main.cpp  demo.cpp  driver.cpp  driver_main.cpp  trajectory_follower.cpp  trajectory_follower_node.cpp
dynamixel_driver/srv/: GripperCommand.srv  MotorCommand.srv
mapping/: CMakeLists.txt  package.xml
mapping/calibration/: apriltags.yaml  extrinsics.yaml  settings.yaml
mapping/config/: extrinsics.yaml
mapping/launch/: calibration.launch  cameras.launch  full.launch  image_view.launch  mapping.launch  mapping_cameras.launch  pointcloud_rviz.launch
mapping/rviz/: calibration.rviz  mapping.rviz
mapping/src/: calibration_node.cpp  mapping_node.cpp
moveit_controller/: .setup_assistant  CMakeLists.txt  package.xml
moveit_controller/config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  rexarm.srdf  ros_controllers.yaml
moveit_controller/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  rexarm_controller.launch  rexarm_moveit_controller_manager.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
occupancy_grid/: CMakeLists.txt  package.xml
occupancy_grid/include/occupancy_grid/: occupancy_grid.hpp
occupancy_grid/msg/: OccupancyGrid.msg
occupancy_grid/src/: occupancy_grid.cpp
perturbator/: .gitignore  CMakeLists.txt  common.cu  common.cuh  common.h  cpu_distance_grid.cu  cpu_distance_grid.cuh  distance_grid.cu  distance_grid.cuh  generate_trajectories.cu  generate_trajectories.cuh  generate_trajectories.test.cu  kdtree.cu  kdtree.cuh  main.cu  matrix.cuh  package.xml  planner.cu  planner.cuh  random.cu  random.cuh  random.h  test.cu  test_distance_grid.cu  test_kdtree.cu  test_matrix.cu  test_rand.cu  trajectory.cuh  trajectory.h  unified_memory_allocator.h  unique_ptr.cuh  vector.cuh  vector.h
perturbator/include/: common.cuh  generate_trajectories.cuh  gpu_error_check.cuh  matrix.cuh  planning_state.cuh  random.cuh  unique_ptr.cuh  vector.cuh
perturbator/src/: common.cu  device_query.cu  generate_trajectories.cu  generate_trajectories.test.cu  main.cu  matrix.cu  planning_state.cu  test_matrix.cu  trajectory.cu  vector.cu
rexarm_description/: CMakeLists.txt  package.xml
rexarm_description/config/: rexarm_description.rviz
rexarm_description/launch/: rexarm_description.launch  rviz.launch
rexarm_description/params/: rexarm_description.yaml
rexarm_description/robots/: rexarm.urdf
src/dynamixel_driver/: CMakeLists.txt  package.xml
src/dynamixel_driver/config/: all.yaml  basic.yaml  joint_2_0.yaml  wheel_1_0.yaml  wheel_2_0.yaml
src/dynamixel_driver/include/dynamixel_driver/: driver.h
src/dynamixel_driver/launch/: controller.launch
src/dynamixel_driver/src/: client.cpp  driver.cpp
src/rexarm_description/: CMakeLists.txt  package.xml
task/: CMakeLists.txt  package.xml
task/src/: main.cpp
