<?xml version="1.0"?>
<package format="2">
    <name>pertubator</name>
    <version>0.1.0</version>
    <description>A motion planner for the rexarm leveraging GPU compute capability</description>

    <maintainer email="nlbrow@umich.edu">Nathan Brown</maintainer>
    <maintainer email="me@gregjm.dev">Gregory Meyer</maintainer>
    <license>AGPL-3.0-or-later</license>
    <url type="repository">https://github.com/EECS467-DOAPP/doapp</url>
    <author>Nathan Brown</author>
    <author>Gregory Meyer</author>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>std_msgs</build_depend>

    <exec_depend>roscpp</exec_depend>
    <exec_depend>std_msgs</exec_depend>

</package>
