<package format="2">
    <name>rexarm_description</name>
    <version>0.1.0</version>
    <description>URDF for the Rexarm.</description>
    <maintainer email="me@gregjm.dev">Gregory Meyer</maintainer>

    <url type="repository">https://github.com/EECS467-DOAPP/doapp</url>
    <author>Gregory Meyer</author>

    <buildtool_depend>catkin</buildtool_depend>
</package>
